GNOME Bugzilla – Bug 643949
There is possible memory leak if xmlParserInputBufferCreateIO is failed.
Last modified: 2012-05-10 08:21:19 UTC
Created attachment 182549 [details] [review] Patch for this problem. For example, ioctx will be closed through xmlFreeParserInputBuffer (directly or indirectly) before the function is returned except xmlParserInputBufferCreateIO is failed.
Comment on attachment 182549 [details] [review] Patch for this problem. [Setting "patch" flag and correcting mime type so this can actually be queried for.]
Thanks Andre' for the triaging :-) The intent of the patch is good but there is a problem in the sense that it is legal to pass a NULL ioclose function. So I had to modify the patch to take this into account to avoid a crash in that situation. I commited the resulting patch: http://git.gnome.org/browse/libxml2/commit/?id=24464be6390bc61a0f0e17890fbfc9c581434e29 thanks a lot ! Daniel